--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
     "database": {
-        "host": "henrydb.cfsjsehoiurs.us-east-2.rds.amazonaws.com",
-        "user": "hdcm",
-        "password": "hdcm02ds",
-        "name": "dbHenry",
-        "rama": "Henry"
+        "host": "diselec-db.cccbupvd7g7d.us-east-2.rds.amazonaws.com",
+        "user": "robin",
+        "password": "Metallica9801.",
+        "name": "diselec",
+        "rama": "Robinson"
     },
     "sql": "SELECT LONGITUD, LATITUD, FECHA, HORA FROM coordenadas ORDER BY FECHA DESC, HORA DESC",
     "sql_query": "INSERT INTO coordenadas (LATITUD, LONGITUD, FECHA, HORA) VALUES (%s, %s, %s, %s)",
-    "sql_h" : "SELECT LONGITUD, LATITUD, FECHA, HORA FROM coordenadas WHERE FECHA BETWEEN '$fechaInicial' AND '$fechaFinal' ORDER BY FECHA DESC, HORA DESC"
+    "sql_h": "SELECT LONGITUD, LATITUD, FECHA, HORA FROM coordenadas WHERE FECHA BETWEEN '$fechaInicial' AND '$fechaFinal' ORDER BY FECHA DESC, HORA DESC"
 }
